generated_simple/chtljs/grammars/chtljs/CHTLJS_simpleParser.cpp

// Generated from grammars/chtljs/CHTLJS_simple.g4 by ANTLR 4.13.1


#include "CHTLJS_simpleListener.h"
#include "CHTLJS_simpleVisitor.h"

#include "CHTLJS_simpleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CHTLJS_simpleParserStaticData final {
  CHTLJS_simpleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CHTLJS_simpleParserStaticData(const CHTLJS_simpleParserStaticData&) = delete;
  CHTLJS_simpleParserStaticData(CHTLJS_simpleParserStaticData&&) = delete;
  CHTLJS_simpleParserStaticData& operator=(const CHTLJS_simpleParserStaticData&) = delete;
  CHTLJS_simpleParserStaticData& operator=(CHTLJS_simpleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chtljs_simpleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CHTLJS_simpleParserStaticData *chtljs_simpleParserStaticData = nullptr;

void chtljs_simpleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chtljs_simpleParserStaticData != nullptr) {
    return;
  }
#else
  assert(chtljs_simpleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CHTLJS_simpleParserStaticData>(
    std::vector<std::string>{
      "chtlScriptBlock", "chtlScriptContent", "chtlStatement", "chtlSelectorStatement", 
      "chtlSelector", "selectorContent", "chtlListenStatement", "chtlListenObject", 
      "chtlListenEvents", "chtlListenEvent", "eventType", "eventHandler", 
      "chtlDelegateStatement", "chtlDelegateObject", "chtlDelegateConfig", 
      "chtlTargetConfig", "chtlEventConfig", "chtlAnimateStatement", "chtlAnimateObject", 
      "chtlAnimateConfig", "chtlAnimateProperty", "chtlDuration", "chtlEasing", 
      "easingValue", "chtlBegin", "chtlEnd", "chtlCssProperties", "chtlCssProperty", 
      "propertyName", "propertyValue", "methodCall", "arguments", "argumentList", 
      "basicStatement"
    },
    std::vector<std::string>{
      "", "", "", "'script'", "'listen'", "'delegate'", "'animate'", "'{{'", 
      "'}}'", "'->'", "", "", "", "'{'", "'}'", "'('", "')'", "';'", "':'", 
      "','", "'.'", "'#'"
    },
    std::vector<std::string>{
      "", "WS", "COMMENT", "CHTL_SCRIPT", "CHTL_LISTEN", "CHTL_DELEGATE", 
      "CHTL_ANIMATE", "CHTL_DOUBLE_BRACE", "CHTL_DOUBLE_BRACE_CLOSE", "CHTL_ARROW", 
      "IDENTIFIER", "NUMBER", "STRING", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
      "SEMICOLON", "COLON", "COMMA", "DOT", "HASH"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chtljs_simpleParserStaticData = staticData.release();
}

}

CHTLJS_simpleParser::CHTLJS_simpleParser(TokenStream *input) : CHTLJS_simpleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CHTLJS_simpleParser::CHTLJS_simpleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CHTLJS_simpleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chtljs_simpleParserStaticData->atn, chtljs_simpleParserStaticData->decisionToDFA, chtljs_simpleParserStaticData->sharedContextCache, options);
}

CHTLJS_simpleParser::~CHTLJS_simpleParser() {
  delete _interpreter;
}

const atn::ATN& CHTLJS_simpleParser::getATN() const {
  return *chtljs_simpleParserStaticData->atn;
}

std::string CHTLJS_simpleParser::getGrammarFileName() const {
  return "CHTLJS_simple.g4";
}

const std::vector<std::string>& CHTLJS_simpleParser::getRuleNames() const {
  return chtljs_simpleParserStaticData->ruleNames;
}

const dfa::Vocabulary& CHTLJS_simpleParser::getVocabulary() const {
  return chtljs_simpleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CHTLJS_simpleParser::getSerializedATN() const {
  return chtljs_simpleParserStaticData->serializedATN;
}


//----------------- ChtlScriptBlockContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlScriptBlockContext::ChtlScriptBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlScriptBlockContext::CHTL_SCRIPT() {
  return getToken(CHTLJS_simpleParser::CHTL_SCRIPT, 0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlScriptBlockContext::LBRACE() {
  return getToken(CHTLJS_simpleParser::LBRACE, 0);
}

CHTLJS_simpleParser::ChtlScriptContentContext* CHTLJS_simpleParser::ChtlScriptBlockContext::chtlScriptContent() {
  return getRuleContext<CHTLJS_simpleParser::ChtlScriptContentContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlScriptBlockContext::RBRACE() {
  return getToken(CHTLJS_simpleParser::RBRACE, 0);
}


size_t CHTLJS_simpleParser::ChtlScriptBlockContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlScriptBlock;
}

void CHTLJS_simpleParser::ChtlScriptBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlScriptBlock(this);
}

void CHTLJS_simpleParser::ChtlScriptBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlScriptBlock(this);
}


std::any CHTLJS_simpleParser::ChtlScriptBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlScriptBlock(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlScriptBlockContext* CHTLJS_simpleParser::chtlScriptBlock() {
  ChtlScriptBlockContext *_localctx = _tracker.createInstance<ChtlScriptBlockContext>(_ctx, getState());
  enterRule(_localctx, 0, CHTLJS_simpleParser::RuleChtlScriptBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(CHTLJS_simpleParser::CHTL_SCRIPT);
    setState(69);
    match(CHTLJS_simpleParser::LBRACE);
    setState(70);
    chtlScriptContent();
    setState(71);
    match(CHTLJS_simpleParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlScriptContentContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlScriptContentContext::ChtlScriptContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CHTLJS_simpleParser::ChtlStatementContext *> CHTLJS_simpleParser::ChtlScriptContentContext::chtlStatement() {
  return getRuleContexts<CHTLJS_simpleParser::ChtlStatementContext>();
}

CHTLJS_simpleParser::ChtlStatementContext* CHTLJS_simpleParser::ChtlScriptContentContext::chtlStatement(size_t i) {
  return getRuleContext<CHTLJS_simpleParser::ChtlStatementContext>(i);
}

std::vector<CHTLJS_simpleParser::BasicStatementContext *> CHTLJS_simpleParser::ChtlScriptContentContext::basicStatement() {
  return getRuleContexts<CHTLJS_simpleParser::BasicStatementContext>();
}

CHTLJS_simpleParser::BasicStatementContext* CHTLJS_simpleParser::ChtlScriptContentContext::basicStatement(size_t i) {
  return getRuleContext<CHTLJS_simpleParser::BasicStatementContext>(i);
}


size_t CHTLJS_simpleParser::ChtlScriptContentContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlScriptContent;
}

void CHTLJS_simpleParser::ChtlScriptContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlScriptContent(this);
}

void CHTLJS_simpleParser::ChtlScriptContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlScriptContent(this);
}


std::any CHTLJS_simpleParser::ChtlScriptContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlScriptContent(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlScriptContentContext* CHTLJS_simpleParser::chtlScriptContent() {
  ChtlScriptContentContext *_localctx = _tracker.createInstance<ChtlScriptContentContext>(_ctx, getState());
  enterRule(_localctx, 2, CHTLJS_simpleParser::RuleChtlScriptContent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7360) != 0)) {
      setState(75);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CHTLJS_simpleParser::CHTL_ANIMATE:
        case CHTLJS_simpleParser::CHTL_DOUBLE_BRACE: {
          setState(73);
          chtlStatement();
          break;
        }

        case CHTLJS_simpleParser::IDENTIFIER:
        case CHTLJS_simpleParser::NUMBER:
        case CHTLJS_simpleParser::STRING: {
          setState(74);
          basicStatement();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlStatementContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlStatementContext::ChtlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJS_simpleParser::ChtlSelectorStatementContext* CHTLJS_simpleParser::ChtlStatementContext::chtlSelectorStatement() {
  return getRuleContext<CHTLJS_simpleParser::ChtlSelectorStatementContext>(0);
}

CHTLJS_simpleParser::ChtlListenStatementContext* CHTLJS_simpleParser::ChtlStatementContext::chtlListenStatement() {
  return getRuleContext<CHTLJS_simpleParser::ChtlListenStatementContext>(0);
}

CHTLJS_simpleParser::ChtlDelegateStatementContext* CHTLJS_simpleParser::ChtlStatementContext::chtlDelegateStatement() {
  return getRuleContext<CHTLJS_simpleParser::ChtlDelegateStatementContext>(0);
}

CHTLJS_simpleParser::ChtlAnimateStatementContext* CHTLJS_simpleParser::ChtlStatementContext::chtlAnimateStatement() {
  return getRuleContext<CHTLJS_simpleParser::ChtlAnimateStatementContext>(0);
}


size_t CHTLJS_simpleParser::ChtlStatementContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlStatement;
}

void CHTLJS_simpleParser::ChtlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlStatement(this);
}

void CHTLJS_simpleParser::ChtlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlStatement(this);
}


std::any CHTLJS_simpleParser::ChtlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlStatementContext* CHTLJS_simpleParser::chtlStatement() {
  ChtlStatementContext *_localctx = _tracker.createInstance<ChtlStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, CHTLJS_simpleParser::RuleChtlStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(80);
      chtlSelectorStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(81);
      chtlListenStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(82);
      chtlDelegateStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(83);
      chtlAnimateStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlSelectorStatementContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlSelectorStatementContext::ChtlSelectorStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJS_simpleParser::ChtlSelectorContext* CHTLJS_simpleParser::ChtlSelectorStatementContext::chtlSelector() {
  return getRuleContext<CHTLJS_simpleParser::ChtlSelectorContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlSelectorStatementContext::DOT() {
  return getToken(CHTLJS_simpleParser::DOT, 0);
}

CHTLJS_simpleParser::MethodCallContext* CHTLJS_simpleParser::ChtlSelectorStatementContext::methodCall() {
  return getRuleContext<CHTLJS_simpleParser::MethodCallContext>(0);
}


size_t CHTLJS_simpleParser::ChtlSelectorStatementContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlSelectorStatement;
}

void CHTLJS_simpleParser::ChtlSelectorStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlSelectorStatement(this);
}

void CHTLJS_simpleParser::ChtlSelectorStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlSelectorStatement(this);
}


std::any CHTLJS_simpleParser::ChtlSelectorStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlSelectorStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlSelectorStatementContext* CHTLJS_simpleParser::chtlSelectorStatement() {
  ChtlSelectorStatementContext *_localctx = _tracker.createInstance<ChtlSelectorStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, CHTLJS_simpleParser::RuleChtlSelectorStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    chtlSelector();
    setState(87);
    match(CHTLJS_simpleParser::DOT);
    setState(88);
    methodCall();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlSelectorContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlSelectorContext::ChtlSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlSelectorContext::CHTL_DOUBLE_BRACE() {
  return getToken(CHTLJS_simpleParser::CHTL_DOUBLE_BRACE, 0);
}

CHTLJS_simpleParser::SelectorContentContext* CHTLJS_simpleParser::ChtlSelectorContext::selectorContent() {
  return getRuleContext<CHTLJS_simpleParser::SelectorContentContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlSelectorContext::CHTL_DOUBLE_BRACE_CLOSE() {
  return getToken(CHTLJS_simpleParser::CHTL_DOUBLE_BRACE_CLOSE, 0);
}


size_t CHTLJS_simpleParser::ChtlSelectorContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlSelector;
}

void CHTLJS_simpleParser::ChtlSelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlSelector(this);
}

void CHTLJS_simpleParser::ChtlSelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlSelector(this);
}


std::any CHTLJS_simpleParser::ChtlSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlSelector(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlSelectorContext* CHTLJS_simpleParser::chtlSelector() {
  ChtlSelectorContext *_localctx = _tracker.createInstance<ChtlSelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, CHTLJS_simpleParser::RuleChtlSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(CHTLJS_simpleParser::CHTL_DOUBLE_BRACE);
    setState(91);
    selectorContent();
    setState(92);
    match(CHTLJS_simpleParser::CHTL_DOUBLE_BRACE_CLOSE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContentContext ------------------------------------------------------------------

CHTLJS_simpleParser::SelectorContentContext::SelectorContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLJS_simpleParser::SelectorContentContext::IDENTIFIER() {
  return getToken(CHTLJS_simpleParser::IDENTIFIER, 0);
}

tree::TerminalNode* CHTLJS_simpleParser::SelectorContentContext::DOT() {
  return getToken(CHTLJS_simpleParser::DOT, 0);
}

tree::TerminalNode* CHTLJS_simpleParser::SelectorContentContext::HASH() {
  return getToken(CHTLJS_simpleParser::HASH, 0);
}


size_t CHTLJS_simpleParser::SelectorContentContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleSelectorContent;
}

void CHTLJS_simpleParser::SelectorContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectorContent(this);
}

void CHTLJS_simpleParser::SelectorContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectorContent(this);
}


std::any CHTLJS_simpleParser::SelectorContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitSelectorContent(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::SelectorContentContext* CHTLJS_simpleParser::selectorContent() {
  SelectorContentContext *_localctx = _tracker.createInstance<SelectorContentContext>(_ctx, getState());
  enterRule(_localctx, 10, CHTLJS_simpleParser::RuleSelectorContent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CHTLJS_simpleParser::DOT

    || _la == CHTLJS_simpleParser::HASH) {
      setState(94);
      _la = _input->LA(1);
      if (!(_la == CHTLJS_simpleParser::DOT

      || _la == CHTLJS_simpleParser::HASH)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(97);
    match(CHTLJS_simpleParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlListenStatementContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlListenStatementContext::ChtlListenStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CHTLJS_simpleParser::ChtlSelectorContext* CHTLJS_simpleParser::ChtlListenStatementContext::chtlSelector() {
  return getRuleContext<CHTLJS_simpleParser::ChtlSelectorContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenStatementContext::DOT() {
  return getToken(CHTLJS_simpleParser::DOT, 0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenStatementContext::CHTL_LISTEN() {
  return getToken(CHTLJS_simpleParser::CHTL_LISTEN, 0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenStatementContext::LPAREN() {
  return getToken(CHTLJS_simpleParser::LPAREN, 0);
}

CHTLJS_simpleParser::ChtlListenObjectContext* CHTLJS_simpleParser::ChtlListenStatementContext::chtlListenObject() {
  return getRuleContext<CHTLJS_simpleParser::ChtlListenObjectContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenStatementContext::RPAREN() {
  return getToken(CHTLJS_simpleParser::RPAREN, 0);
}


size_t CHTLJS_simpleParser::ChtlListenStatementContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlListenStatement;
}

void CHTLJS_simpleParser::ChtlListenStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlListenStatement(this);
}

void CHTLJS_simpleParser::ChtlListenStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlListenStatement(this);
}


std::any CHTLJS_simpleParser::ChtlListenStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlListenStatement(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlListenStatementContext* CHTLJS_simpleParser::chtlListenStatement() {
  ChtlListenStatementContext *_localctx = _tracker.createInstance<ChtlListenStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, CHTLJS_simpleParser::RuleChtlListenStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    chtlSelector();
    setState(100);
    match(CHTLJS_simpleParser::DOT);
    setState(101);
    match(CHTLJS_simpleParser::CHTL_LISTEN);
    setState(102);
    match(CHTLJS_simpleParser::LPAREN);
    setState(103);
    chtlListenObject();
    setState(104);
    match(CHTLJS_simpleParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlListenObjectContext ------------------------------------------------------------------

CHTLJS_simpleParser::ChtlListenObjectContext::ChtlListenObjectContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenObjectContext::LBRACE() {
  return getToken(CHTLJS_simpleParser::LBRACE, 0);
}

CHTLJS_simpleParser::ChtlListenEventsContext* CHTLJS_simpleParser::ChtlListenObjectContext::chtlListenEvents() {
  return getRuleContext<CHTLJS_simpleParser::ChtlListenEventsContext>(0);
}

tree::TerminalNode* CHTLJS_simpleParser::ChtlListenObjectContext::RBRACE() {
  return getToken(CHTLJS_simpleParser::RBRACE, 0);
}


size_t CHTLJS_simpleParser::ChtlListenObjectContext::getRuleIndex() const {
  return CHTLJS_simpleParser::RuleChtlListenObject;
}

void CHTLJS_simpleParser::ChtlListenObjectContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlListenObject(this);
}

void CHTLJS_simpleParser::ChtlListenObjectContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CHTLJS_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlListenObject(this);
}


std::any CHTLJS_simpleParser::ChtlListenObjectContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CHTLJS_simpleVisitor*>(visitor))
    return parserVisitor->visitChtlListenObject(this);
  else
    return visitor->visitChildren(this);
}

CHTLJS_simpleParser::ChtlListenObjectContext* CHTLJS_simpleParser::chtlListenObject() {
  ChtlListenObjectContext *_localctx = _tracker.createInstance<ChtlListenObjectContext>(_ctx, getState());
  enterRule(_localctx, 14, CHTLJS_simpleParser::RuleChtlListenObject);
